# aria

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  README.md  config.hpp.in
cmake/: git.cmake
examples/: CMakeLists.txt  main.cpp
include/aria/: aria.hpp  config.hpp
include/aria/application/: application.hpp  config.hpp
include/aria/command_line/: command.hpp
include/aria/stage/: stage.hpp
include/aria/utils/: colors.hpp  image.hpp  types.hpp
include/aria/utils/time/: time.hpp
include/aria/window/: cursor.hpp  stage.hpp  titlebar_style.hpp
include/core/: aria.hpp  config.hpp
include/utils/: common.hpp
include/utils/command_line/: command.hpp
src/: CMakeLists.txt
src/aria/: aria.cpp
src/aria/command_line/: command.cpp
src/aria/stage/: cursor.cpp  stage.cpp
src/aria/utils/: colors.cpp  image.cpp
src/aria/utils/time/: time.cpp
src/aria/window/: cursor.cpp  stage.cpp
src/core/: aria.cpp
test/: CMakeLists.txt  foo.cpp  test_common.hpp
test/utils/command_line/: CMakeLists.txt  mixed_args.cpp  single_arg.cpp  value_sep_args.cpp
